welcome.lessons.welcome.loopfor.LoopStairs.scala.error
Runner:5: error: not found: type Red
	setCouleurBrosse(c:Red);
                           ^